# Hexxagon_game

./: AI.h  Board.h  CMakeLists.txt  Game.h  GraphicalBoard.h  Main page.md  README.md  ScoreBoard.h  StartWindow.h  Variables.h  main.cpp
